--- a/workshopche/src/main/resources/application.properties
+++ b/workshopche/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.datasource.driverClassName =com.mysql.cj.jdbc.Driver
 spring.datasource.url = jdbc:mysql://localhost:3306/workshop?createDatabaseIfNotExist=true&amp
 spring.datasource.username= root
-spring.datasource.password= bebe1zamunda
+spring.datasource.password= 12345
 
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
